# AI-product-selector

./: .env.example  .gitignore  00-项目说明书.md  03-抖店商家经营Agent-V2-升级版PRD.md  04-电商经营Agent-融合方案.md  05-Codex任务清单.md  06-在运营商家诊断Agent-PRD.md  06-执行计划-PLAN.md  07-女装诊断Skill写作规范.md  07-测试报告.md  08-验收用例-女装真实场景.md  09-演示话术.md  10-Prompt工程与幻觉治理.md  11-电商格局与未来思考.md  12-开发计划-从V1到V2.md  CLAUDE.md  LICENSE  README.md  pdf v1.md  plan.md  prd.md  requirements.txt  update.md  小二职责与痛点.md  浙大k_12_ai培训项目_prd_v_0.md
.codegraph/: daemon.pid
agent/: README.md  __init__.py  evidence.py  graph.py  hub.py  llm.py  review.py  run.py  state.py
agent/nodes/: __init__.py  aggregate.py  analyzers.py  base.py  persist.py  planner.py  pricing.py  support.py
agent/skills/: README.md  baokuan.md  guanjianci.md  guiyin.md  kefu.md  (+7 more)
demo/: streamlit_app.py
docs/: tikhub_接入说明.md  开源项目调研与选型.md
web-fetcher/: pyproject.toml
web-fetcher/config/: routing.yaml
web-fetcher/src/webfetcher/: __init__.py  cli.py  core.py  memory.py  version_checker.py
web-fetcher/src/webfetcher/drivers/: version_manager.py
web-fetcher/src/webfetcher/errors/: classifier.py  user_facing.py
web-fetcher/src/webfetcher/fetchers/: __init__.py  cdp_fetcher.py  config.py  headless_manager.py  selenium.py
web-fetcher/src/webfetcher/parsing/: engine_v2.py  extractors.py  parser.py  templates.py
web-fetcher/src/webfetcher/parsing/engine/: template_parser.py
web-fetcher/src/webfetcher/parsing/engine/strategies/: text_pattern_strategy.py
web-fetcher/src/webfetcher/parsing/engine/templates/: generic.yaml
web-fetcher/src/webfetcher/parsing/engine/templates/sites/qcc_com/: template.yaml
web-fetcher/src/webfetcher/parsing/engine/templates/sites/wikipedia/: zh_wikipedia.yaml
web-fetcher/src/webfetcher/routing/: config_loader.py  engine.py
web-fetcher/src/webfetcher/utils/: url_formatter.py
采集工作台/: AI素材采集.command  collect
(+44 files in other folders)
