[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "material-webfetcher"
version = "0.1.0"
description = "素材采集平台内置网页抓取内核，用于网页正文提取和 Markdown 转换"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Material Collector Team", email = "noreply@example.com"}
]
keywords = ["web", "scraping", "markdown", "wechat", "xiaohongshu", "fetcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
]

# 核心依赖（默认包含完整功能：urllib + Selenium + CDP）
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
    "html2text>=2020.1.16",
    "jsonschema>=4.0.0",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.9.0",
    "selenium>=4.15.0,<5.0.0",
    "pychrome==0.2.3",
    "python-docx>=0.8.11",
    "trafilatura>=2.0.0",
    "readability-lxml>=0.8.1",
]

# 可选依赖（用于特殊场景）
[project.optional-dependencies]
# 最小化安装（仅urllib，无浏览器自动化）
minimal = []
# 开发工具
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# 所有功能（与默认相同，保留向后兼容）
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# 向后兼容的别名
selenium = []
cdp = []

# CLI 脚本注册
[project.scripts]
wf = "webfetcher.cli:main"
wd = "webfetcher.doc_cli:main"

# Hatchling 配置
[tool.hatch.build.targets.wheel]
packages = ["src/webfetcher"]

# 包含配置文件作为 package data
[tool.hatch.build.targets.sdist]
include = [
    "/src/webfetcher",
    "/config/*.yaml",
]

# pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
